cmss/main/default/objects/Asset/fields/NettoDeposit__c.field-meta.xml
<CustomField>
    <fullName>NettoDeposit__c</fullName>
    <description>Suma veškerých došlých vkladů klienta</description>
    <label>Netto Deposit</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>