cmss/main/default/objects/Asset/fields/NumberofLoanCaseRelatedAssets__c.field-meta.xml
<CustomField>
    <fullName>NumberofLoanCaseRelatedAssets__c</fullName>
    <label>Number of Loan Case Related Assets</label>
    <summaryFilterItems>
        <field>AssetRelationship.ProductTypeRelatedAsset__c</field>
        <operation>equals</operation>
        <value>0</value>
    </summaryFilterItems>
    <summaryForeignKey>AssetRelationship.AssetId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>