cmss/main/default/objects/Asset/fields/OpenedActivityDate__c.field-meta.xml
<CustomField>
    <fullName>OpenedActivityDate__c</fullName>
    <description>Datum nejbližší otevřené aktivity</description>
    <formula>Account.OpenedActivityDate__c</formula>
    <label>Opened Activity Date</label>
    <type>Date</type>
</CustomField>