cmss/main/default/objects/Asset/fields/OpeningBalance__c.field-meta.xml
<CustomField>
    <fullName>OpeningBalance__c</fullName>
    <description>Zůstatek k 31.12. předchozího roku</description>
    <label>Opening Balance</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>