cmss/main/default/objects/Asset/fields/OriginalInsuranceAmount__c.field-meta.xml
<CustomField>
    <fullName>OriginalInsuranceAmount__c</fullName>
    <description>Původně sjednaná pojistná částka</description>
    <label>Original Insurance Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>