cmss/main/default/objects/Asset/fields/OriginalPPName__c.field-meta.xml
<CustomField>
    <fullName>OriginalPPName__c</fullName>
    <label>Original PP Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>