cmss/main/default/objects/Asset/fields/OtherUses__c.field-meta.xml
<CustomField>
    <fullName>OtherUses__c</fullName>
    <description>Další účely použití</description>
    <label>Other Uses</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>