cmss/main/default/objects/Asset/fields/PaymentDelay__c.field-meta.xml
<CustomField>
    <fullName>PaymentDelay__c</fullName>
    <label>Payment Delay</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>