cmss/main/default/objects/Asset/fields/PercentageSaved__c.field-meta.xml
<CustomField>
    <fullName>PercentageSaved__c</fullName>
    <description>procento naspoření tj. Poměr sumy aktuálního zůstatku (včetně SP) k CČ, zaokrouhleno na 2 desetinné místa.</description>
    <label>Percentage Saved</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>