cmss/main/default/objects/Asset/fields/PersonalIdentificationNr__c.field-meta.xml
<CustomField>
    <fullName>PersonalIdentificationNr__c</fullName>
    <description>Rodné číslo klienta</description>
    <formula>Account.PersonalIdentificationNr__c</formula>
    <label>Personal Identification Number</label>
    <type>Text</type>
</CustomField>