cmss/main/default/objects/Asset/fields/PlanCreditPayment__c.field-meta.xml
<CustomField>
    <fullName>PlanCreditPayment__c</fullName>
    <description>Plán. datum splac. ÚP</description>
    <label>Plan Credit Payment</label>
    <type>Date</type>
</CustomField>