cmss/main/default/objects/Asset/fields/PortfManSortingCode__c.field-meta.xml
<CustomField>
    <fullName>PortfManSortingCode__c</fullName>
    <description>TH správce stavu A</description>
    <formula>Account.Owner.SortingCode__c</formula>
    <label>Portf Man Sorting Code</label>
    <type>Text</type>
</CustomField>