cmss/main/default/objects/Asset/fields/PortfManSuperiorL2SortingCode__c.field-meta.xml
<CustomField>
    <fullName>PortfManSuperiorL2SortingCode__c</fullName>
    <description>TH nadřízeného 2. úr. správce stavu</description>
    <formula>Account.PortfolioMngmtA__r.SuperiorLevel2__r.SortingCode__c</formula>
    <label>Portf Man Superior L2 Sorting Code</label>
    <type>Text</type>
</CustomField>