cmss/main/default/objects/Asset/fields/PortfManSuperiorL3SortingCode__c.field-meta.xml
<CustomField>
    <fullName>PortfManSuperiorL3SortingCode__c</fullName>
    <description>TH nadřízeného 3. úr. správce stavu</description>
    <formula>Account.PortfolioMngmtA__r.SuperiorLevel3__r.SortingCode__c</formula>
    <label>Portf Man Superior L3 Sorting Code</label>
    <type>Text</type>
</CustomField>