cmss/main/default/objects/Asset/fields/PortfolioMgmtA__c.field-meta.xml
<CustomField>
    <fullName>PortfolioMgmtA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portfolio Management A</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Assets2</relationshipName>
    <type>Lookup</type>
</CustomField>