cmss/main/default/objects/Asset/fields/PortfolioMngmtA__c.field-meta.xml
<CustomField>
    <fullName>PortfolioMngmtA__c</fullName>
    <formula>Account.PortfolioMngmtA__r.LastName + &apos; &apos; +  Account.PortfolioMngmtA__r.FirstName</formula>
    <label>Portfolio Management A</label>
    <type>Text</type>
</CustomField>