cmss/main/default/objects/Asset/fields/Premium__c.field-meta.xml
<CustomField>
    <fullName>Premium__c</fullName>
    <label>Premium</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>