cmss/main/default/objects/Asset/fields/PremiumDue__c.field-meta.xml
<CustomField>
    <fullName>PremiumDue__c</fullName>
    <label>Premium Due</label>
    <type>Date</type>
</CustomField>