cmss/main/default/objects/Asset/fields/PremiumPaid__c.field-meta.xml
<CustomField>
    <fullName>PremiumPaid__c</fullName>
    <label>Premium Paid</label>
    <type>Date</type>
</CustomField>