cmss/main/default/objects/Asset/fields/PrepaidMonths__c.field-meta.xml
<CustomField>
    <fullName>PrepaidMonths__c</fullName>
    <label>Prepaid Months</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>