cmss/main/default/objects/Asset/fields/PresavingsDepositFailures__c.field-meta.xml
<CustomField>
    <fullName>PresavingsDepositFailures__c</fullName>
    <description>Částka předpořená/ mínusem výpadek vkladu</description>
    <label>Presavings Deposit Failures</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>