cmss/main/default/objects/Asset/fields/PresavingsDepositFailuresNumber__c.field-meta.xml
<CustomField>
    <fullName>PresavingsDepositFailuresNumber__c</fullName>
    <description>Počet předspořených splátek/ počet výpadků</description>
    <label>Presavings Deposit Failures Number</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>