cmss/main/default/objects/Asset/fields/PrescribedPayment__c.field-meta.xml
<CustomField>
    <fullName>PrescribedPayment__c</fullName>
    <description>Předepsaná platba</description>
    <label>Prescribed Payment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>