cmss/main/default/objects/Asset/fields/PreviousPPDate__c.field-meta.xml
<CustomField>
    <fullName>PreviousPPDate__c</fullName>
    <label>Previous PP Date</label>
    <type>Date</type>
</CustomField>