cmss/main/default/objects/Asset/fields/Product2ExternalID__c.field-meta.xml
<CustomField>
    <fullName>Product2ExternalID__c</fullName>
    <label>Product2 External ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>