cmss/main/default/objects/Asset/fields/ProductCloseDate__c.field-meta.xml
<CustomField>
    <fullName>ProductCloseDate__c</fullName>
    <description>Datum kdy byl produkt uzavřen</description>
    <label>Product Close Date</label>
    <type>Date</type>
</CustomField>