cmss/main/default/objects/Asset/fields/ProductSubtype__c.field-meta.xml
<CustomField>
    <fullName>ProductSubtype__c</fullName>
    <description>Podtyp produktu</description>
    <label>Product Subtype</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>11000</fullName>
            </value>
            <value>
                <fullName>11001</fullName>
            </value>
            <value>
                <fullName>11002</fullName>
            </value>
            <value>
                <fullName>11003</fullName>
            </value>
            <value>
                <fullName>11004</fullName>
            </value>
            <value>
                <fullName>11005</fullName>
            </value>
            <value>
                <fullName>11006</fullName>
            </value>
            <value>
                <fullName>11007</fullName>
            </value>
            <value>
                <fullName>15000</fullName>
            </value>
            <value>
                <fullName>15001</fullName>
            </value>
            <value>
                <fullName>15002</fullName>
            </value>
            <value>
                <fullName>15003</fullName>
            </value>
            <value>
                <fullName>15004</fullName>
            </value>
            <value>
                <fullName>15005</fullName>
            </value>
            <value>
                <fullName>15006</fullName>
            </value>
            <value>
                <fullName>16000</fullName>
            </value>
            <value>
                <fullName>16110</fullName>
            </value>
            <value>
                <fullName>16012</fullName>
            </value>
            <value>
                <fullName>16019</fullName>
            </value>
            <value>
                <fullName>16022</fullName>
            </value>
            <value>
                <fullName>16025</fullName>
            </value>
            <value>
                <fullName>16027</fullName>
            </value>
            <value>
                <fullName>16034</fullName>
            </value>
            <value>
                <fullName>16035</fullName>
            </value>
            <value>
                <fullName>16036</fullName>
            </value>
            <value>
                <fullName>16042</fullName>
            </value>
            <value>
                <fullName>16060</fullName>
            </value>
            <value>
                <fullName>16083</fullName>
            </value>
            <value>
                <fullName>16084</fullName>
            </value>
            <value>
                <fullName>16091</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>