cmss/main/default/objects/Asset/fields/ProductType__c.field-meta.xml
<CustomField>
    <fullName>ProductType__c</fullName>
    <description>0 = úverový případ
1 = Úvěr ze Stavebního Spoření (USS)
2 = Meziúvěr (MU)
7 = Účet Rizikového Životního Pojištění (RZP)
9 = účet Stavebního Spoření (SS)&quot;</description>
    <label>Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>