cmss/main/default/objects/Asset/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <description>Program</description>
    <label>Program</label>
    <length>100</length>
    <type>Text</type>
</CustomField>