cmss/main/default/objects/Asset/fields/ProgramRestartDate__c.field-meta.xml
<CustomField>
    <fullName>ProgramRestartDate__c</fullName>
    <description>Datum znovuzahájení programu</description>
    <label>Program Restart Date</label>
    <type>Date</type>
</CustomField>