cmss/main/default/objects/Asset/fields/PromptedDate__c.field-meta.xml
<CustomField>
    <fullName>PromptedDate__c</fullName>
    <description>&quot;Datum, kdy byl klient dotázán, zda má zájem o přidělení cílové částky - s úvěrem, bez úvěru..
Datum zaslání nabídky na přidělení klientovi. 
Hodnota se plní v procesu hodnocení-dotázání pokud byly splněny podmínky pro dotázání, jinak se nuluje. Po zaslání nabídky je hodnota fixována. Opětovně se může vynulovat procesem hodnocení až po znovuzařazení do hodnocení. Ve FS je toto datum označováno jako Datum dotázání.&quot;</description>
    <label>Prompted Date</label>
    <type>Date</type>
</CustomField>