cmss/main/default/objects/Asset/fields/PropertyValueDrawingPossibility__c.field-meta.xml
<CustomField>
    <fullName>PropertyValueDrawingPossibility__c</fullName>
    <label>Property Value Drawing Possibility</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>