cmss/main/default/objects/Asset/fields/ReceivalByCmssDate__c.field-meta.xml
<CustomField>
    <fullName>ReceivalByCmssDate__c</fullName>
    <description>Receival By CMSS Date</description>
    <label>Receival By CMSS Date</label>
    <type>Date</type>
</CustomField>