cmss/main/default/objects/Asset/fields/RecordCreationDate__c.field-meta.xml
<CustomField>
    <fullName>RecordCreationDate__c</fullName>
    <description>Datum pořízení</description>
    <label>Record Creation Date</label>
    <type>Date</type>
</CustomField>