cmss/main/default/objects/Asset/fields/RecreditAmount__c.field-meta.xml
<CustomField>
    <fullName>RecreditAmount__c</fullName>
    <description>Částka přeúvěrování</description>
    <label>Recredit Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>