cmss/main/default/objects/Asset/fields/RecreditIncreasedAmount__c.field-meta.xml
<CustomField>
    <fullName>RecreditIncreasedAmount__c</fullName>
    <description>Navýšená částka angažovanosti (o kolik bylo navýšená částka při přeúvěrování)</description>
    <label>Recredit Increased Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>