cmss/main/default/objects/Asset/fields/ReductionInsuranceContractFrom__c.field-meta.xml
<CustomField>
    <fullName>ReductionInsuranceContractFrom__c</fullName>
    <label>Reduction Insurance Contract From</label>
    <type>Date</type>
</CustomField>