cmss/main/default/objects/Asset/fields/ReductionInsuranceContractTo__c.field-meta.xml
<CustomField>
    <fullName>ReductionInsuranceContractTo__c</fullName>
    <label>Reduction Insurance Contract To</label>
    <type>Date</type>
</CustomField>