cmss/main/default/objects/Asset/fields/RejectedDate__c.field-meta.xml
<CustomField>
    <fullName>RejectedDate__c</fullName>
    <description>Zamítnuto</description>
    <label>Rejected Date</label>
    <type>Date</type>
</CustomField>