cmss/main/default/objects/Asset/fields/RelatedRole__c.field-meta.xml
<CustomField>
    <fullName>RelatedRole__c</fullName>
    <label>Related Role</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>