cmss/main/default/objects/Asset/fields/ReleaseInsuranceContractFrom__c.field-meta.xml
<CustomField>
    <fullName>ReleaseInsuranceContractFrom__c</fullName>
    <label>Release Insurance Contract From</label>
    <type>Date</type>
</CustomField>