cmss/main/default/objects/Asset/fields/ReleaseInsuranceContractTo__c.field-meta.xml
<CustomField>
    <fullName>ReleaseInsuranceContractTo__c</fullName>
    <label>Release Insurance Contract To</label>
    <type>Date</type>
</CustomField>