cmss/main/default/objects/Asset/fields/RemainingDraw__c.field-meta.xml
<CustomField>
    <fullName>RemainingDraw__c</fullName>
    <description>Výše úvěrového příslibu na účtu ÚSS (=  Pole Celkem k čerpání  - pole Čerpáno)</description>
    <label>Remaining Draw</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>