cmss/main/default/objects/Asset/fields/ReminderCode__c.field-meta.xml
<CustomField>
    <fullName>ReminderCode__c</fullName>
    <label>Reminder Code</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>