cmss/main/default/objects/Asset/fields/RepaymentPercentage__c.field-meta.xml
<CustomField>
    <fullName>RepaymentPercentage__c</fullName>
    <label>Repayment Percentage</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>