cmss/main/default/objects/Asset/fields/RepaymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>RepaymentStartDate__c</fullName>
    <label>Repayment Start Date</label>
    <type>Date</type>
</CustomField>