cmss/main/default/objects/Asset/fields/RequestSignDate__c.field-meta.xml
<CustomField>
    <fullName>RequestSignDate__c</fullName>
    <description>Datum podpisu řádné žádosti</description>
    <label>Request Sign Date</label>
    <type>Date</type>
</CustomField>