cmss/main/default/objects/Asset/fields/RequiredSavings__c.field-meta.xml
<CustomField>
    <fullName>RequiredSavings__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Povinné dospořování</description>
    <label>Required Savings</label>
    <type>Checkbox</type>
</CustomField>