cmss/main/default/objects/Asset/fields/ResignationMatures__c.field-meta.xml
<CustomField>
    <fullName>ResignationMatures__c</fullName>
    <description>Odstoupeno / Zesplatněno</description>
    <label>Resignation Matures</label>
    <type>Date</type>
</CustomField>