cmss/main/default/objects/Asset/fields/RetirementPension__c.field-meta.xml
<CustomField>
    <fullName>RetirementPension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Retirement Pension</label>
    <type>Checkbox</type>
</CustomField>