cmss/main/default/objects/Asset/fields/RetirementPensionDate__c.field-meta.xml
<CustomField>
    <fullName>RetirementPensionDate__c</fullName>
    <label>Retirement Pension Date</label>
    <type>Date</type>
</CustomField>