cmss/main/default/objects/Asset/fields/RetirementPensionStart__c.field-meta.xml
<CustomField>
    <fullName>RetirementPensionStart__c</fullName>
    <label>Retirement Pension Start</label>
    <type>Date</type>
</CustomField>