cmss/main/default/objects/Asset/fields/RiskPremium__c.field-meta.xml
<CustomField>
    <fullName>RiskPremium__c</fullName>
    <label>Risk Premium</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>