cmss/main/default/objects/Asset/fields/RZPRequestSignDate__c.field-meta.xml
<CustomField>
    <fullName>RZPRequestSignDate__c</fullName>
    <label>RZP Request Sign Date</label>
    <type>Date</type>
</CustomField>