cmss/main/default/objects/Asset/fields/SavedAmount__c.field-meta.xml
<CustomField>
    <fullName>SavedAmount__c</fullName>
    <description>Aktuálně naspořená částka nahoru ( k % naspoření)</description>
    <label>Saved Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>