cmss/main/default/objects/Asset/fields/SavingPremium__c.field-meta.xml
<CustomField>
    <fullName>SavingPremium__c</fullName>
    <label>Saving Premium</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>