cmss/main/default/objects/Asset/fields/SecondDecissionDate__c.field-meta.xml
<CustomField>
    <fullName>SecondDecissionDate__c</fullName>
    <description>Datum 2. rozhodnutí</description>
    <label>Second Decission Date</label>
    <type>Date</type>
</CustomField>