cmss/main/default/objects/Asset/fields/SecondPaymentAmount__c.field-meta.xml
<CustomField>
    <fullName>SecondPaymentAmount__c</fullName>
    <label>Second Payment Amount</label>
    <precision>14</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>