cmss/main/default/objects/Asset/fields/SecondPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>SecondPaymentDate__c</fullName>
    <label>Second Payment Date</label>
    <type>Date</type>
</CustomField>